; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/extr_frontend_driver.c_frontend_driver_process_args.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/extr_frontend_driver.c_frontend_driver_process_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i8**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @frontend_driver_process_args(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = call %struct.TYPE_3__* (...) @frontend_get_ptr()
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (i32*, i8**)*, i32 (i32*, i8**)** %11, align 8
  %13 = icmp ne i32 (i32*, i8**)* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %9, %2
  br label %22

15:                                               ; preds = %9
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32 (i32*, i8**)*, i32 (i32*, i8**)** %17, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load i8**, i8*** %4, align 8
  %21 = call i32 %18(i32* %19, i8** %20)
  br label %22

22:                                               ; preds = %15, %14
  ret void
}

declare dso_local %struct.TYPE_3__* @frontend_get_ptr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
